--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -9,9 +9,7 @@
     <button mat-button [matMenuTriggerFor]="CadastroNivel1">Cadastro</button>
     <mat-menu #CadastroNivel1="matMenu">
       <button mat-menu-item routerLink="cliente">Clientes</button>
-      <button mat-menu-item routerLink="imovel">Imóveis</button>
-      <button mat-menu-item routerLink="vistoria">Vistoria</button>
-      <!-- <button mat-menu-item routerLink="simple-form">Simple Form</button> -->
+      <button mat-menu-item routerLink="avaliacao">Avaliações</button>
     </mat-menu>
     <!-- matMenu is key word -->
   
