--- a/src/app/components/avaliacao/avaliacao.component.html
+++ b/src/app/components/avaliacao/avaliacao.component.html
@@ -1,1 +1,63 @@
-<p>avaliacao works!</p>
+<app-titulo [p_titulo_componente]="p_titulo_avaliacao"></app-titulo>
+<hr>
+<div class="container">
+    <form [formGroup]="frmAvaliacao" (ngSubmit)="EnviarAvaliacao()">
+
+        <!-- MES ANO -->
+        <div class="form-group col-md-8">
+            <label for="lblMesAno" class="for">Mes Ano</label>
+            <input type="text" class="form-control" formControlName="MesAno"
+                [ngClass]="{'is-invalid':p_submitted && frmAvaliacao.controls['MesAno'].errors}">
+
+            <div *ngIf="p_submitted && frmAvaliacao.controls['MesAno'].errors" class="text-danger">
+                <div *ngIf="p_submitted && frmAvaliacao.controls['MesAno'].errors['required']">
+                    [Mês Ano] é obrigatório !
+                </div>
+            </div>
+        </div>
+
+        <!-- CLIENTES AVALIADOS -->
+
+        <mat-form-field appearance="outline" style="width: 500px;">
+            <mat-select placeholder="Clientes" [formControl]="toppings" [(value)]="selectedToppings" multiple>
+              <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping.razaoSocial}}</mat-option>
+            </mat-select>
+          </mat-form-field>
+          <!-- <p>
+            {{selectedToppings | json}}
+          </p> -->
+
+        <!-- NOTA AVALIACAO -->
+
+        <div class="form-group col-md-4">
+            <label for="lblNotaAval" class="for">Nota de Avaliação</label>
+            <input type="number" class="form-control" formControlName="NotaAvaliacao" min="0" max="10"
+                [ngClass]="{'is-invalid':p_submitted && frmAvaliacao.controls['NotaAvaliacao'].errors}">
+
+            <div *ngIf="p_submitted && frmAvaliacao.controls['NotaAvaliacao'].errors" class="text-danger">
+
+                <div *ngIf="p_submitted && frmAvaliacao.controls['NotaAvaliacao'].errors['required']">
+                    [Nota de Avaliação] é obrigatório
+                </div>
+            </div>
+        </div>
+
+        <!-- MOTIVO AVALIACAO -->
+        <br>
+
+        <mat-form-field appearance="outline" style="width: 450px;">
+            <textarea matInput placeholder="Descrição do motivo da avaliação" formControlName="MotivoAvaliacao"
+            cdkTextareaAutosize [cdkAutosizeMinRows]="4" [cdkAutosizeMaxRows]="10">
+
+            </textarea>
+        </mat-form-field>
+
+        <div class="form-group">
+            <hr>
+            <div style="float:left">
+                <!-- I USE FORMS VALIDATIONS -->
+                <button type="submit" class="btn btn-success">Gravar</button>
+            </div>
+        </div>
+    </form>
+</div>
