--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -14,10 +14,10 @@
     <!-- matMenu is key word -->
   
      <!-- matMenu is key word -->
-    <button mat-button [matMenuTriggerFor]="tabela">Componentes</button>
+    <button mat-button [matMenuTriggerFor]="tabela">Manutenção</button>
     <mat-menu #tabela="matMenu">
-      <button mat-menu-item routerLink="table">Table</button>
-      <button mat-menu-item routerLink="datatable">DataTable</button>
+      <button mat-menu-item routerLink="table-cliente">Clientes</button>
+      <button mat-menu-item routerLink="avaliacao">Avaliações</button>
       <button mat-menu-item routerLink="selecao">Seleção</button>
     </mat-menu>
      <!-- matMenu is key word -->
