--- a/src/app/components/avaliacao/avaliacao.component.html
+++ b/src/app/components/avaliacao/avaliacao.component.html
@@ -19,25 +19,27 @@
         <div class="form-group col-md-4">
             <!-- CLIENTES AVALIADOS -->
             <mat-form-field appearance="outline" style="width: 500px;">
-                <mat-select placeholder="Clientes" [formControl]="toppings" [(value)]="selectedToppings" multiple>
-                    <mat-option *ngFor="let topping of toppingList"
-                        [value]="topping">{{topping.razaoSocial}}</mat-option>
+                <mat-label>Clientes</mat-label>
+                <mat-select [formControl]="frmclientes" [(value)]="selectedClientes" multiple>
+                    <mat-option *ngFor="let clienteItem of clientesAvaliados"
+                        [value]="clienteItem">{{clienteItem.razaoSocial}}
+                    </mat-option>
                 </mat-select>
             </mat-form-field>
-            <!-- <p>
-            {{selectedToppings | json}}
-            </p> -->
+            <p>
+            {{selectedClientes | json}}
+            </p>
         </div>
 
         <!-- NOTA AVALIACAO -->
         <div class="form-group col-md-4">
             <label for="lblNotaAval" class="for">Nota de Avaliação</label>
-            <input type="number" class="form-control" formControlName="NotaAvaliacao" min="0" max="10"
-                [ngClass]="{'is-invalid':p_submitted && frmAvaliacao.controls['NotaAvaliacao'].errors}">
+            <input type="number" class="form-control" formControlName="notaAvaliacao" min="0" max="10"
+                [ngClass]="{'is-invalid':p_submitted && frmAvaliacao.controls['notaAvaliacao'].errors}">
 
-            <div *ngIf="p_submitted && frmAvaliacao.controls['NotaAvaliacao'].errors" class="text-danger">
+            <div *ngIf="p_submitted && frmAvaliacao.controls['notaAvaliacao'].errors" class="text-danger">
 
-                <div *ngIf="p_submitted && frmAvaliacao.controls['NotaAvaliacao'].errors['required']">
+                <div *ngIf="p_submitted && frmAvaliacao.controls['notaAvaliacao'].errors['required']">
                     [Nota de Avaliação] é obrigatório
                 </div>
             </div>
@@ -47,8 +49,20 @@
         <br>
 
         <mat-form-field appearance="outline" style="width: 450px;">
-            <textarea matInput placeholder="Descrição do motivo da avaliação" formControlName="MotivoAvaliacao"
-                cdkTextareaAutosize [cdkAutosizeMinRows]="4" [cdkAutosizeMaxRows]="10">
+            <textarea matInput placeholder="Descrição do motivo da avaliação" formControlName="motivoAvaliacao"
+                cdkTextareaAutosize [cdkAutosizeMinRows]="4" [cdkAutosizeMaxRows]="10"
+                [ngClass]="{'is-invalid':p_submitted && frmAvaliacao.controls['motivoAvaliacao'].errors}">
+
+                <div *ngIf="p_submitted && frmCliente.controls['motivoAvaliacao'].errors" class="text-danger">
+    
+                    <div *ngIf="p_submitted && frmCliente.controls['motivoAvaliacao'].errors['required']">
+                        [Motivo] é obrigatório
+                    </div>
+                    <div *ngIf="p_submitted && frmCliente.controls['motivoAvaliacao'].errors['minlength']">
+                        [Motivo] deve ter no mínimo 10 caracteres !
+                    </div>
+    
+                </div>
 
             </textarea>
         </mat-form-field>
