--- a/src/app/components/titulo/titulo.component.html
+++ b/src/app/components/titulo/titulo.component.html
@@ -1,1 +1,7 @@
-<h1>{{p_titulo_componente}}</h1>
+<div class="row">
+    <h1>{{p_titulo_componente}}</h1>
+    <div class="mt-1">
+        <ng-content></ng-content>
+    </div>
+
+</div>
