--- a/src/app/components/menubar/menubar.component.html
+++ b/src/app/components/menubar/menubar.component.html
@@ -2,22 +2,23 @@
     <button mat-icon-button routerLink="main">
       <mat-icon>home</mat-icon>
     </button>
-    <span>Donnes</span>
+    <span>Vital Latina</span>
     <span class="align-midle"></span>
   
     <!-- matMenu is key word -->
     <button mat-button [matMenuTriggerFor]="CadastroNivel1">Cadastro</button>
     <mat-menu #CadastroNivel1="matMenu">
-      <button mat-menu-item routerLink="cliente">Clientes</button>
-      <button mat-menu-item routerLink="avaliacao">Avaliações</button>
+      <button mat-menu-item routerLink="meio-pagamento">Meios de Pagemento</button>
+      <button mat-menu-item routerLink="boleto">Boletos</button>
+      <button mat-menu-item routerLink="pix">Pix</button>
     </mat-menu>
     <!-- matMenu is key word -->
   
      <!-- matMenu is key word -->
-    <button mat-button [matMenuTriggerFor]="tabela">Manutenção</button>
+    <button mat-button [matMenuTriggerFor]="tabela">Financeiro</button>
     <mat-menu #tabela="matMenu">
-      <button mat-menu-item routerLink="table-cliente">Clientes</button>
-      <button mat-menu-item routerLink="avaliacao">Avaliações</button>
+      <button mat-menu-item routerLink="table-meio-pagamento">Processar</button>
+      <button mat-menu-item routerLink="table-pix">Pix</button>
       <button mat-menu-item routerLink="selecao">Seleção</button>
     </mat-menu>
      <!-- matMenu is key word -->
